--- a/Calkulator/MainWindow.xaml
+++ b/Calkulator/MainWindow.xaml
@@ -5,23 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calkulator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="600">
-    <Grid>
+        Title="MainWindow" Height="472.203" Width="400">
+    <Grid Margin="0,0,-8,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="509*"/>
             <ColumnDefinition Width="83*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="money" HorizontalAlignment="Left" Height="31" Margin="35,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" TextChanged="money_TextChanged" SpellCheck.IsEnabled="True"/>
-        <TextBox x:Name="days" HorizontalAlignment="Left" Height="33" Margin="35,187,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" TextChanged="days_TextChanged"/>
-        <TextBox x:Name="procent" HorizontalAlignment="Left" Height="33" Margin="35,251,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" TextChanged="procent_TextChanged" SpellCheck.IsEnabled="True"/>
-        <Button Content="Рассчитать" HorizontalAlignment="Left" Height="32" Margin="37,298,0,0" VerticalAlignment="Top" Width="163" IsDefault="True" Background="LightBlue" Click="Button_Click"/>
+        <TextBox x:Name="money" HorizontalAlignment="Left" Height="31" Margin="33,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" TextChanged="money_TextChanged" SpellCheck.IsEnabled="True"/>
+        <TextBox x:Name="days" HorizontalAlignment="Left" Height="33" Margin="33,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" TextChanged="days_TextChanged"/>
+        <TextBox x:Name="procent" HorizontalAlignment="Left" Height="33" Margin="35,245,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" TextChanged="procent_TextChanged" SpellCheck.IsEnabled="True"/>
+        <Button Content="Рассчитать" HorizontalAlignment="Left" Height="32" Margin="35,298,0,0" VerticalAlignment="Top" Width="163" IsDefault="True" Background="LightBlue" Click="Button_Click"/>
         <Label Content="Введите:" HorizontalAlignment="Left" Height="32" Margin="35,54,0,0" VerticalAlignment="Top" Width="165" IsEnabled="False"/>
-        <Label Content="Результат:" HorizontalAlignment="Left" Height="32" Margin="37,335,0,0" VerticalAlignment="Top" Width="165" IsEnabled="False"/>
+        <Label Content="Результат:" HorizontalAlignment="Left" Height="32" Margin="35,335,0,0" VerticalAlignment="Top" Width="165" IsEnabled="False"/>
         <Label Content="Сумма" HorizontalAlignment="Left" Height="32" Margin="35,86,0,0" VerticalAlignment="Top" Width="165"/>
-        <Label Content="Количество дней" HorizontalAlignment="Left" Height="32" Margin="35,155,0,0" VerticalAlignment="Top" Width="165"/>
-        <Label Content="Процентая ставка" HorizontalAlignment="Left" Height="32" Margin="35,219,0,0" VerticalAlignment="Top" Width="165"/>
-        <Label Content="Калькулятор" HorizontalAlignment="Left" Height="49" Margin="35,0,0,0" VerticalAlignment="Top" Width="434" IsEnabled="False" FontSize="30" />
-        <TextBox x:Name="rezult" HorizontalAlignment="Left" Height="32" Margin="37,367,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" IsEnabled="False" Background="LightBlue" TextChanged="rezult_TextChanged_1"/>
+        <Label Content="Количество дней" HorizontalAlignment="Left" Height="32" Margin="35,149,0,0" VerticalAlignment="Top" Width="165"/>
+        <Label Content="Процентая ставка" HorizontalAlignment="Left" Height="32" Margin="35,213,0,0" VerticalAlignment="Top" Width="165"/>
+        <Label Content="Калькулятор" HorizontalAlignment="Left" Height="49" VerticalAlignment="Top" Width="400" IsEnabled="False" FontSize="30"  Background="LightBlue" Grid.ColumnSpan="2" Margin="-3,0,0,0" Foreground="Black"/>
+        <TextBox x:Name="rezult" HorizontalAlignment="Left" Height="32" Margin="35,367,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" IsEnabled="False" Background="LightBlue" TextChanged="rezult_TextChanged_1"/>
 
     </Grid>
 
